--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -425,14 +425,16 @@
             </div>
         </section>
 
-        <section id="teacher" class="page">
+        <section id="teacher" class="page" ng-controller="TeacherCtrl">
             <div class="class-header">
                 <h3>Quản lý giáo viên</h3>
                 <span>TThêm, sửa, xóa giáo viên và phân công lớp</span>
                 <div class="class-actions">
                     <img src="..\img\hocsinh.png" alt="">
-                    <h4>Tổng: 3 giáo viên</h4>
-                    <button class="addteacher-btn"><i class="fa-solid fa-plus"></i>Thêm giáo viên</button>
+                    <h4 id="totalTeacher_Teacher">Tổng: 0 giáo viên</h4>
+                    <button class="addteacher-btn" ng-click="openCreateTeacher()">
+                        <i class="fa-solid fa-plus"></i>Thêm giáo viên
+                    </button>
                 </div>
             </div>
             <div id="overlayteacher" class="overlayteacher"></div>
@@ -445,7 +447,7 @@
                 </div>
                 <p class="modal-desc">Nhập thông tin giáo viên và phân công lớp.</p>
 
-                <form class="teacher-form" id="teacherForm">
+                <form class="teacher-form" id="teacherForm" ng-submit="createTeacher()">
                     <div class="form-group">
                         <label>Họ tên</label>
                         <input type="text" id="teacherName" placeholder="">
@@ -464,32 +466,19 @@
                     <div class="form-group">
                         <label>Môn dạy</label>
                         <select id="teacherSubject">
-                            <option>Chọn môn dạy</option>
-                            <option>Tiếng Việt</option>
-                            <option>Toán</option>
-                            <option>Đạo đức</option>
-                            <option>Tự nhiên và Xã hội</option>
-                            <option>Khoa học</option>
-                            <option>Lịch sử</option>
-                            <option>Địa lí</option>
-                            <option>Tin học và Công nghệ</option>
-                            <option>Âm nhạc</option>
-                            <option>Mĩ thuật</option>
-                            <option>Giáo dục Thể chất</option>
-                            <option>Hoạt động trải nghiệm</option>
-                            <option>Tiếng Anh</option>
+                            <option value="">Chọn môn dạy</option>
+                            <option ng-repeat="s in subjects" value="{{s.subjectName}}">
+                                {{s.subjectName}}
+                            </option>
                         </select>
                     </div>
 
                     <div class="form-group">
                         <label>Lớp dạy</label>
                         <div class="checkbox-group" id="teacherClass">
-                            <label><input type="checkbox"> 1A</label>
-                            <label><input type="checkbox"> 1B</label>
-                            <label><input type="checkbox"> 1C</label>
-                            <label><input type="checkbox"> 1D</label>
-                            <label><input type="checkbox"> 2A</label>
-                            <label><input type="checkbox"> 2B</label>
+                            <label ng-repeat="c in classList">
+                                <input type="checkbox" value="{{c.className}}"> {{c.className}}
+                            </label>
                         </div>
                     </div>
 
@@ -510,7 +499,7 @@
                 </div>
                 <p class="modal-desc">Nhập thông tin giáo viên và phân công lớp.</p>
 
-                <form class="teacher-form" id="teacherFormUpdate">
+                <form class="teacher-form" id="teacherFormUpdate" ng-submit="updateTeacher()">
                     <div class="form-group">
                         <label>Họ tên</label>
                         <input type="text" id="teacherNameUpdate">
@@ -529,32 +518,19 @@
                     <div class="form-group">
                         <label>Môn dạy</label>
                         <select id="teacherSubjectUpdate">
-                            <option>Chọn môn dạy</option>
-                            <option>Tiếng Việt</option>
-                            <option>Toán</option>
-                            <option>Đạo đức</option>
-                            <option>Tự nhiên và Xã hội</option>
-                            <option>Khoa học</option>
-                            <option>Lịch sử</option>
-                            <option>Địa lí</option>
-                            <option>Tin học và Công nghệ</option>
-                            <option>Âm nhạc</option>
-                            <option>Mĩ thuật</option>
-                            <option>Giáo dục Thể chất</option>
-                            <option>Hoạt động trải nghiệm</option>
-                            <option>Tiếng Anh</option>
+                            <option value="">Chọn môn dạy</option>
+                            <option ng-repeat="s in subjects" value="{{s.subjectName}}">
+                                {{s.subjectName}}
+                            </option>
                         </select>
                     </div>
 
                     <div class="form-group">
                         <label>Lớp dạy</label>
                         <div class="checkbox-group" id="teacherClassUpdate">
-                            <label><input type="checkbox"> 1A</label>
-                            <label><input type="checkbox"> 1B</label>
-                            <label><input type="checkbox"> 1C</label>
-                            <label><input type="checkbox"> 1D</label>
-                            <label><input type="checkbox"> 2A</label>
-                            <label><input type="checkbox"> 2B</label>
+                            <label ng-repeat="c in classList">
+                                <input type="checkbox" value="{{c.className}}"> {{c.className}}
+                            </label>
                         </div>
                     </div>
 
@@ -583,47 +559,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Nguyễn Thị Lan</td>
-                            <td>lan.nguyen@school.edu.vn</td>
-                            <td>0987654321</td>
-                            <td>Toán</td>
-                            <td><span class="status activeclass1">1A</span> <span class="status activeclass1">1B</span>
-                            </td>
-                            <td><span class="status activeclass">1A</span></td>
-                            <td><span class="status activeclass">Hoạt động</span></td>
-                            <td class="actions">
-                                <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                                <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Trần Thị M</td>
-                            <td>mtran@school.edu.vn</td>
-                            <td>0369852147</td>
-                            <td>Văn</td>
+                        <tr ng-repeat="t in teachers track by (t.teacherID || t.teacherId || t.id)">
+                            <td>{{t.fullName}}</td>
+                            <td>{{t.email}}</td>
+                            <td>{{t.phone}}</td>
+                            <td>{{t.specialization}}</td>
                             <td>
-                                <span class="status activeclass1">1A</span>
-                                <span class="status activeclass1">1B</span>
+                                <span class="status activeclass1"
+                                    ng-repeat="cn in (t.classNames || []) track by $index">
+                                    {{cn}}
+                                </span>
                             </td>
-                            <td><span class="status activeclass">1B</span></td>
+                            <td><span class="status activeclass">{{t.isCN ? 'Có' : 'Không'}}</span></td>
                             <td><span class="status activeclass">Hoạt động</span></td>
                             <td class="actions">
-                                <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                                <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Đào Thị B</td>
-                            <td>bdao@school.edu.vn</td>
-                            <td>0123456789</td>
-                            <td>Anh</td>
-                            <td><span class="status activeclass1">2A</span></td>
-                            <td><span class="status activeclass">2A</span></td>
-                            <td><span class="status activeclass">Hoạt động</span></td>
-                            <td class="actions">
-                                <button class="edit editTeacher"><i class="fa-solid fa-pen-to-square"></i></button>
-                                <button class="delete deleteTeacher"><i class="fa-solid fa-trash-can"></i></button>
+                                <button class="edit editTeacher" ng-click="openUpdateTeacher(t)">
+                                    <i class="fa-solid fa-pen-to-square"></i>
+                                </button>
+                                <button class="delete deleteTeacher" ng-click="deleteTeacher(t)">
+                                    <i class="fa-solid fa-trash-can"></i>
+                                </button>
                             </td>
                         </tr>
                     </tbody>
